--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -62,7 +62,7 @@ const layoutProps = {
         ><path
           d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
         ></path>
-      </svg><span>Go back</span>
+      </svg><span>返回</span>
     </button>
   </div>
   <main id="main-content">
@@ -93,21 +93,22 @@ const layoutProps = {
             d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
           ></path>
         </svg>
-        <span>Back to Top</span>
+        <span>返回顶部</span>
       </button>
 
       <ShareLinks />
     </div>
   </main>
+
   <Footer />
 </Layout>
 
 <style>
-  main {
-    @apply mx-auto w-full max-w-3xl px-4 pb-12;
+  #main-content {
+    @apply mx-auto flex max-w-3xl flex-1 flex-col px-2;
   }
   .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
+    @apply my-4 text-3xl font-bold sm:my-8 sm:text-5xl;
   }
 </style>
 
