--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,9 +16,9 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>Copyright &#169; {currentYear}</span>
+      <span>版权所有 &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>保留所有权利</span>
     </div>
   </div>
 </footer>
