--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -18,34 +18,48 @@ const isNextDisabled = next === "disabled";
 
 {
   totalPages > 1 && (
-    <nav class="pagination-wrapper" aria-label="Pagination">
+    <nav class="pagination-wrapper" aria-label="分页">
       <LinkButton
         disabled={isPrevDisabled}
         href={prevUrl}
-        className={`mr-4 select-none ${prev}`}
-        ariaLabel="Previous"
+        className="pagination-button"
+        ariaLabel="上一页"
+        title="上一页"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class:list={[{ "disabled-svg": isPrevDisabled }]}
+          class="h-5 w-5"
+          viewBox="0 0 20 20"
+          fill="currentColor"
         >
-          <path d="M12.707 17.293 8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z" />
+          <path
+            fill-rule="evenodd"
+            d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+            clip-rule="evenodd"
+          />
         </svg>
-        Prev
       </LinkButton>
-      {currentPage} / {totalPages}
+      <span class="pagination-text">
+        第 {currentPage} 页，共 {totalPages} 页
+      </span>
       <LinkButton
         disabled={isNextDisabled}
         href={nextUrl}
-        className={`ml-4 select-none ${next}`}
-        ariaLabel="Next"
+        className="pagination-button"
+        ariaLabel="下一页"
+        title="下一页"
       >
-        Next
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class:list={[{ "disabled-svg": isNextDisabled }]}
+          class="h-5 w-5"
+          viewBox="0 0 20 20"
+          fill="currentColor"
         >
-          <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
+          <path
+            fill-rule="evenodd"
+            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+            clip-rule="evenodd"
+          />
         </svg>
       </LinkButton>
     </nav>
@@ -54,12 +68,12 @@ const isNextDisabled = next === "disabled";
 
 <style>
   .pagination-wrapper {
-    @apply mb-8 mt-auto flex justify-center;
+    @apply flex items-center justify-center gap-2;
   }
-  .disabled {
-    @apply pointer-events-none select-none opacity-50 hover:text-skin-base group-hover:fill-skin-base;
+  .pagination-button {
+    @apply p-2 hover:rotate-6;
   }
-  .disabled-svg {
-    @apply group-hover:!fill-skin-base;
+  .pagination-text {
+    @apply text-sm text-skin-accent;
   }
 </style>
