--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -17,9 +17,9 @@ export interface Props {
 const { currentPage, totalPages, paginatedPosts } = Astro.props;
 ---
 
-<Layout title={`Posts | ${SITE.title}`}>
+<Layout title={`文章列表 | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
+  <Main pageTitle="文章列表" pageDesc="我发布的所有文章。">
     <ul>
       {
         paginatedPosts.map(({ data, slug }) => (
