--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,19 +6,19 @@ import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
 ---
 
-<Layout title={`404 Not Found | ${SITE.title}`}>
+<Layout title={`页面未找到 | ${SITE.title}`}>
   <Header />
 
   <main id="main-content">
     <div class="not-found-wrapper">
-      <h1 aria-label="404 Not Found">404</h1>
+      <h1 aria-label="404 页面未找到">404</h1>
       <span aria-hidden="true">¯\_(ツ)_/¯</span>
-      <p>Page Not Found</p>
+      <p>页面未找到</p>
       <LinkButton
         href="/"
         className="my-6 text-lg underline decoration-dashed underline-offset-8"
       >
-        Go back home
+        返回首页
       </LinkButton>
     </div>
   </main>
